assets/css/styles: fix duplicate h1 alignment.

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -100,6 +100,10 @@ h3 {
   padding-top: 1em;
   padding-bottom: 1em;
 
+  h1 {
+    text-align: left;
+  }
+
   img {
     min-width: 25em;
     max-width: 35em;
@@ -465,7 +469,6 @@ span .amp {
 
     h1 {
       font-size: 200%;
-      text-align: left;
     }
   }
 
